<resources>
    <string name="chat_login_choose_server">选择服务器</string>
    <string name="chat_login_chat_server_tips">1.新用户需选择或添加一台服务器为默认服务器，用于接收好友聊天消息；\n2.若为已注册账户，原默认服务器不变，可前往[我的]-[服务器]页面切换。</string>
    <string name="chat_login_contract_server_tips">1.需选择或添加一台服务器为默认区块链节点，用于上传和获取账户信息；\n2.可前往[我的]-[服务器]页面切换。</string>
    <string name="chat_login_edit_chat_server">编辑聊天服务器</string>
    <string name="chat_login_add_chat_server">添加聊天服务器</string>
    <string name="chat_login_edit_contract_server">编辑区块链节点</string>
    <string name="chat_login_add_contract_server">添加区块链节点</string>
    <string name="chat_tips_edit_server_name">服务器名称</string>
    <string name="chat_hint_edit_server_name">请输入服务器名称</string>
    <string name="chat_tips_edit_server_address">服务器地址</string>
    <string name="chat_hint_edit_server_address">请输入服务器地址</string>
    <string name="chat_tip_add_server_success">添加服务器成功</string>
    <string name="chat_tip_edit_server_success">修改服务器成功</string>
    <string name="chat_tip_del_server_success">删除服务器成功</string>
    <string name="chat_tip_confirm_to_del_server">确定要删除这个服务器吗？</string>
    <string name="chat_click_again_to_exit">再按一次退出应用</string>
    <string name="chat_login_type_words">助记词账户</string>
    <string name="chat_login_create_account">创建账户</string>
    <string name="chat_login_import_account">导入账户</string>
    <string name="chat_login_type_account">手机号/邮箱</string>
    <string name="chat_login_find_mnem_words">找回助记词登录</string>
    <string name="chat_login_tips_agree_protocol">请先勾选协议</string>
    <string name="chat_login_tips_choose_server">请先选择服务器</string>
    <string name="chat_login_tips_agreement">我已阅读并同意《谈信用户服务协议》</string>
    <string name="chat_login_tips_choose_chat_server">选择接收聊天消息的服务器</string>
    <string name="chat_login_tips_choose_contract_server">选择上传账户信息的区块链节点</string>
    <string name="chat_title_chat_server">服务器地址</string>
    <string name="chat_title_contract_server">区块链节点</string>
    <string name="chat_title_official_server">官方地址</string>
    <string name="chat_title_custom_server">自定义地址</string>
    <string name="chat_title_chat_server_group">聊天服务</string>
    <string name="chat_login_edit_chat_server_group">编辑服务器分组</string>
    <string name="chat_login_add_chat_server_group">添加服务器分组</string>
    <string name="chat_tip_add_server_group_success">添加服务器分组成功，请耐心等待，稍后查看结果…</string>
    <string name="chat_tip_del_server_group_success">删除服务器分组成功，请耐心等待，稍后查看结果…</string>
    <string name="chat_tip_edit_server_group_success">修改服务器分组成功，请耐心等待，稍后查看结果…</string>
    <string name="chat_tip_cant_del_default_server">默认服务器分组不能删除</string>
    <string name="chat_tip_wrong_server_protocol">服务器协议必须为http或https</string>
    <string name="chat_tip_wrong_server_port">服务器端口错误</string>
    <string name="chat_tip_wrong_server_format">服务器地址格式错误</string>
    <string name="chat_tip_confirm_to_del_server_group">确定要删除这个服务器分组吗？</string>
    <string name="chat_login_title_create_mnem">备份助记词</string>
    <string name="chat_login_mnem_chinese">中文</string>
    <string name="chat_login_mnem_english">English</string>
    <string name="chat_login_tips_remember_mnem">请务必抄下助记词，确定之后将进行校验</string>
    <string name="chat_login_warn_secure_mnem">提示：请勿截图！如果有人获取你的助记词将直接获取你的资产！请抄写下助记词并存放在安全的地方，我们会在下一屏进行校验。</string>
    <string name="chat_login_change_mnem">更换助记词</string>
    <string name="chat_login_backup_mnem">开始备份</string>
    <string name="chat_login_backup_skip">跳过备份</string>
    <string name="chat_login_validate_mnem">验证您备份的助记词</string>
    <string name="chat_login_click_correct_order">请按照正确的顺序点击每个单词</string>
    <string name="chat_login_mnem_wrong">助记词不正确</string>
    <string name="chat_login_mnem_backup_fail">助记词备份失败</string>
    <string name="chat_login_mnem_backup_success">助记词备份成功</string>
    <string name="chat_login_title_import_account">导入账户</string>
    <string name="chat_login_import_mnem_hint">请输入助记词</string>
    <string name="chat_login_import_mnem_support_tips">支持导入所有遵循BIP标准生成的助记词</string>
    <string name="chat_login_import_private_key_chain">主链：</string>
    <string name="chat_login_import_private_key_chain_bty">BTY</string>
    <string name="chat_login_import_private_key_hint">请输入私钥或扫描私钥生成的二维码录入</string>
    <string name="chat_login_start_import_account">开始导入</string>
    <string name="chat_login_mnem_import_fail">助记词导入失败</string>
    <string name="chat_login_mnem_import_success">助记词导入成功</string>
    <string name="chat_login_mnem_recover_success">助记词自动恢复成功，请重新设置密码</string>
    <string name="chat_home_action_scan">扫一扫</string>
    <string name="chat_home_action_create_group">创建群聊</string>
    <string name="chat_home_action_search">添加朋友/群</string>
    <string name="chat_home_action_my_qr_code">我的二维码</string>
    <string name="chat_home_action_create_company">创建团队</string>
    <string name="chat_home_action_okr">OKR</string>
    <string name="chat_title_main_contact">通讯录</string>
    <string name="chat_title_black_list">黑名单</string>
    <string name="chat_title_friend_list">好友</string>
    <string name="chat_title_group_list">群聊</string>
    <string name="chat_home_server_disconnect">服务器连接异常，点击查看</string>
    <string name="chat_title_private_chat">私聊</string>
    <string name="chat_title_group_chat">群聊</string>
    <string name="chat_tips_unread_num">[%1$d条]%2$s</string>
    <string name="chat_tips_sender_me">我:%1$s</string>
    <string name="chat_common_empty_list">暂无数据</string>
    <string name="chat_black_list_empty">暂无黑名单</string>
    <string name="chat_friend_list_empty">暂无好友</string>
    <string name="chat_invite_friend">邀请好友</string>
    <string name="chat_friend_message_list_empty">暂无好友消息</string>
    <string name="chat_start_chat">开启聊天</string>
    <string name="chat_room_list_empty">暂无群聊</string>
    <string name="chat_suggest_group">推荐群聊</string>
    <string name="chat_room_message_list_empty">暂无群消息</string>
    <string name="chat_contact_list_empty">暂无联系人</string>
    <string name="chat_promote_list_empty">暂无记录</string>
    <string name="chat_action_open_photo">相册</string>
    <string name="chat_account_menu_wallet">我的钱包</string>
    <string name="chat_account_menu_red_packet">红包记录</string>
    <string name="chat_account_menu_server">服务器</string>
    <string name="chat_account_menu_share">分享邀请</string>
    <string name="chat_account_menu_security">安全管理</string>
    <string name="chat_account_menu_setting">设置中心</string>
    <string name="chat_account_menu_update">检查更新</string>
    <string name="chat_action_logout">退出帐号</string>
    <string name="chat_action_search_scan">扫一扫</string>
    <string name="chat_action_search_scan_tips">扫码二维码名片</string>
    <string name="chat_action_search_import_friends">导入好友</string>
    <string name="chat_action_search_import_friends_tips">仅支持本设备登录过的账号的好友</string>
    <string name="chat_title_edit_nickname">修改昵称</string>
    <string name="chat_tip_nickname">昵称</string>
    <string name="chat_tip_nickname_edit_success">昵称修改成功，请耐心等待，稍后查看结果…</string>
    <string name="chat_tip_nickname_empty">昵称不能为空</string>
    <string name="chat_tip_avatar">头像</string>
    <string name="chat_tip_avatar_edit_success">头像修改成功，请耐心等待，稍后查看结果…</string>
    <string name="chat_title_security_setting">安全管理</string>
    <string name="chat_tips_export_words">导出助记词</string>
    <string name="chat_tips_export_private">导出私钥</string>
    <string name="chat_tips_phone">手机号</string>
    <string name="chat_tips_email">邮箱</string>
    <string name="chat_tips_encrypt_key">密聊密码</string>
    <string name="chat_tips_action1">修改密码</string>
    <string name="chat_tips_action2">设置密码</string>
    <string name="chat_tips_action3">去绑定</string>
    <string name="chat_security_setting_tip1">助记词用于加密聊天消息以及聊天文件，更换设备登录时需导入同一助记词才可查看历史加密消息，请及时导出助记词保存至安全的地方！</string>
    <string name="chat_security_setting_tip2">助记词可通过手机/邮箱和密聊密码加密上传至官方服务器，提供助记词找回服务。</string>
    <string name="chat_save_words_tip">请务必抄下助记词并存放至安全的地方，若助记词丢失，重装或换设备登录时将无法查看历史加密消息！并无法重置密聊密码！若助记词被他人获取，将可能获取你的信息！</string>
    <string name="chat_tips_chat_pwd_error">密聊密码错误</string>
    <string name="chat_tips_mnem_export_fail">助记词导出失败</string>
    <string name="chat_tips_private_export_fail">私钥导出失败</string>
    <string name="chat_title_bind_phone">绑定手机</string>
    <string name="chat_title_bind_email">绑定邮箱</string>
    <string name="chat_tips_bind_phone_tips">绑定手机后可用手机登录</string>
    <string name="chat_tips_bind_email_tips">绑定邮箱后可用邮箱登录</string>
    <string name="chat_hint_input_phone">请输入手机号</string>
    <string name="chat_hint_input_email">请输入邮箱</string>
    <string name="chat_action_bind_send_code">获取验证码</string>
    <string name="chat_tips_bind_account_success">绑定成功</string>
    <string name="chat_action_unbind_and_rebind">解除并绑定</string>
    <string name="chat_action_unbind_phone_login">手机号登录</string>
    <string name="chat_action_unbind_import_mnem">导入助记词</string>
    <string name="chat_tips_override_bind">手机号/邮箱已绑定过其他助记词账户，是否解除原绑定并重新绑定本地助记词账户？</string>
    <string name="chat_tips_override_bind2">若原帐号有资产，将无法通过手机号找回，有丢失风险，请谨慎解绑！</string>
    <string name="chat_tips_phone_forget_password">忘记密聊密码将无法通过手机号找回原账号！您可以通过：\n1、导入助记词登录（可修改密码）；\n2、解除原绑定，重新生成新账号并绑定本手机号。</string>
    <string name="chat_tips_email_forget_password">忘记密聊密码将无法通过邮箱找回原账号！您可以通过：\n1、导入助记词登录（可修改密码）；\n2、手机号登录尝试找回，或手机号登录的忘记密码，进行“解除并绑定”的操作</string>
    <string name="chat_tips_override_forget_password2">解除原绑定将丢失原账号信息和资产，请谨慎解绑！</string>
    <string name="chat_title_setting_center">设置中心</string>
    <string name="chat_tips_app_notify_switch">应用通知开关</string>
    <string name="chat_tips_new_msg_notify">接收新消息通知</string>
    <string name="chat_tips_rtc_call_notify">接收语音和视频通话邀请提醒</string>
    <string name="chat_tips_system_sound_and_vibrate">系统声音与振动</string>
    <string name="chat_tips_new_msg_sys_notify">新消息系统通知</string>
    <string name="chat_tips_rtc_call_sys_notify">语音和视频通话提醒</string>
    <string name="chat_tips_go_sys_notify_settings">前往系统设置</string>
    <string name="chat_set_chat_password">请设置密聊密码</string>
    <string name="chat_input_chat_password">请输入密聊密码</string>
    <string name="chat_encrypt_password_hint">8–16位数字、字母或符号组合</string>
    <string name="chat_title_set_encrypt_password">设置密聊密码</string>
    <string name="chat_title_encrypt_password">修改密聊密码</string>
    <string name="chat_tips_old_encrypt_pwd">旧密码</string>
    <string name="chat_tips_old_encrypt_pwd_hint">请输入旧密码</string>
    <string name="chat_tips_first_encrypt_pwd_hint">请设置密码</string>
    <string name="chat_tips_second_encrypt_pwd_hint">请再次输入密码</string>
    <string name="chat_tips_forget_password">忘记密码</string>
    <string name="chat_tips_new_encrypt_pwd">新密码</string>
    <string name="chat_tips_new_encrypt_pwd_hint">请再次输入新密码</string>
    <string name="chat_tips_update_encrypt_pwd1">密聊密码修改成功</string>
    <string name="chat_tips_update_encrypt_pwd2">密码错误</string>
    <string name="chat_tips_update_encrypt_pwd3">请输入8–16位字符</string>
    <string name="chat_tips_update_encrypt_pwd4">请输入数字、字母或者符号组合</string>
    <string name="chat_tips_update_encrypt_pwd5">请设置8–16位数字、字母或符号组合</string>
    <string name="chat_tips_update_encrypt_pwd6">两次密码不一致</string>
    <string name="chat_tips_update_encrypt_pwd7">密聊密码设置成功</string>
    <string name="chat_title_contact_info">详细资料</string>
    <string name="chat_action_send_msg">发消息</string>
    <string name="chat_title_create_group_select_server">选择服务器</string>
    <string name="chat_tips_create_group_manage_server">管理</string>
    <string name="chat_tips_choose_group_server">选择群聊所属的聊天服务器</string>
    <string name="chat_action_add_group_user">添加成员</string>
    <string name="chat_action_del_group_user">删除成员</string>
    <string name="chat_action_set_group_admin">设置管理员</string>
    <string name="chat_mute_cancel">解除禁言</string>
    <string name="chat_select_mute_time">选择禁言时间</string>
    <string name="chat_forever">永远</string>
    <string name="chat_24_hour">24小时</string>
    <string name="chat_10_hour">10小时</string>
    <string name="chat_2_hour">2小时</string>
    <string name="chat_30_minute">30分钟</string>
    <string name="chat_10_minute">10分钟</string>
</resources>