<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biz_color_primary_dark"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.fzm.widget.CustomTitleBar
        android:id="@+id/ctb_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:left_icon="@drawable/biz_ic_back_black"
        app:right_text="@string/chat_tips_create_group_manage_server"
        app:right_text_color="@color/biz_color_accent"
        app:title_text="@string/chat_title_create_group_select_server" />

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/chat_tips_choose_group_server"
        android:textColor="@color/biz_text_grey_light" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/server_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>