<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_group_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="13dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/chat_action_add_group_user"
        android:textColor="@color/biz_text_grey_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/remove_group_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="13dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/chat_action_del_group_user"
        android:textColor="@color/biz_text_grey_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/set_admin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="13dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/chat_action_set_group_admin"
        android:textColor="@color/biz_text_grey_dark"
        android:textSize="16sp" />
</LinearLayout>